<resources>
    <string name="app_name">Garden Manager</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="settings_fragment_label">Settings Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="select_a_garden_to_view_devices">Select a garden to view devices</string>

    <string name="sensors">Sensors</string>
    <string name="actuators">Actuators</string>

    <string name="not_available">N/A</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="my_gardens">My Gardens</string>
    <string name="no_gardens_available">No Gardens Available</string>
    <string name="add_new_garde">Add New Garden</string>

    <string name="add_new_device">Add New Device</string>
    <string name="device_id">Device ID</string>
    <string name="device_name">Device name</string>
    <string name="latest_reading">Latest reading</string>
    <string name="submit">Submit</string>

    <string name="add_existing_device">Add Existing Device</string>
    <string name="create_new_device">Create New Device</string>
    <string name="create_device">Create Device</string>

    <string name="add_new_garden">Add New Garden</string>
    <string name="garden_id">Garden ID</string>
    <string name="garden_name">Garden name</string>

    <string name="add_existing_garden">Add Existing Garden</string>
    <string name="create_new_garden">Create New Garden</string>
    <string name="create_garden">Create Garden</string>

    <string name="search">Search</string>
    <string name="type_a_device_name_or_id">Type a device name or id</string>
    <string name="type_a_garden_name_or_id">Type a garden name or id</string>
    <string name="search_for_a_device_to_add_it">Search for a device to add it</string>
    <string name="search_for_a_garden_to_add_it">Search for a garden to add it</string>
    <string name="no_results_found">No results found</string>

    <string name="in_garden">In this garden</string>

    <string name="settings">Settings</string>
    <string name="clear_gardens_and_devices">Clear gardens and devices</string>

    <string name="see_history">See history</string>

    <string name="readings_history">Readings History</string>
    <string name="loading_readings">Loading readings</string>
    <string name="no_readings_available">No readings available</string>
    <string name="most_recent">Most recent</string>
    <string name="delete_readings">Delete readings</string>

    <string name="garden_manager_notification_title">Garden Manager is enabled</string>
    <string name="garden_manager_notification_text">Garden Manager is polling the WithoutNet server for the latest messages</string>

    <string name="server_url">Server URL</string>
    <string name="garden_manager_id">Garden Manager ID</string>
    <string name="server_polling_interval">Server polling interval</string>
    <string name="max_number_of_readings_per_device">Max number of readings per device</string>

    <string name="change">Change</string>
    <string name="enter_new">Enter new</string>
</resources>