<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewDevicePopUpActivity">

    <TextView
        android:id="@+id/addNewDeviceTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/add_new_device"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDeviceIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:width="180dp"
        android:minHeight="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/device_id"
        app:layout_constraintBottom_toTopOf="@+id/editDeviceNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewDeviceTitleTextView"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="269dp" />

    <EditText
        android:id="@+id/editDeviceNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:width="180dp"
        android:ems="10"
        android:hint="@string/device_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toTopOf="@+id/editReadingValueTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDeviceIdTextView"
        app:layout_constraintVertical_bias="0.492" />

    <EditText
        android:id="@+id/editReadingValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:width="180dp"
        android:ems="10"
        android:hint="@string/latest_reading"
        android:inputType="text"
        android:minHeight="48dp"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDeviceNameTextView"
        tools:layout_editor_absoluteY="475dp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editReadingValueTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editReadingValueTextView"
        app:layout_constraintVertical_bias="0.918" />


    <!--android:layout_marginTop="28dp"
        android:layout_marginBottom="1dp"-->
</androidx.constraintlayout.widget.ConstraintLayout>