<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewGardenPopUpActivity">

    <TextView
        android:id="@+id/addNewGardenTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/add_new_garden"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editGardenIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:width="180dp"
        android:minHeight="48dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/garden_id"
        app:layout_constraintBottom_toTopOf="@+id/editGardenNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addNewGardenTitleTextView"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="269dp" />

    <EditText
        android:id="@+id/editGardenNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:width="180dp"
        android:ems="10"
        android:hint="@string/garden_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textIsSelectable="true"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editGardenIdTextView"
        app:layout_constraintVertical_bias="0.492" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editGardenNameTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editGardenNameTextView"
        app:layout_constraintVertical_bias="0.918" />

</androidx.constraintlayout.widget.ConstraintLayout>