<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateNewFragment">

    <TextView
        android:id="@+id/createNewTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_device"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/createNewNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/createNewNameTextView"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/device_name"
        android:textColorHint="@color/medium_gray"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createNewSubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:elevation="0dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/create_device"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="16sp"
        android:typeface="serif"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createNewNameTextView"
        app:layout_constraintVertical_bias="0.894"
        app:strokeColor="#000000"
        app:strokeWidth="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>