<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GardenDashboardFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/devicesSwipeCardsFragmentContainerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/sensorsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sensorsButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sensors"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/actuatorsButton"
        app:layout_constraintTop_toBottomOf="@+id/devicesSwipeCardsFragmentContainerView"
        app:strokeColor="#00FFFFFF" />

    <Button
        android:id="@+id/actuatorsButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/actuators"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toEndOf="@+id/sensorsButton"
        app:layout_constraintTop_toBottomOf="@+id/devicesSwipeCardsFragmentContainerView" />

    <!--<androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="300dp"
        app:cardBackgroundColor="@color/pastel_green"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/swipeCardViewPager"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </androidx.cardview.widget.CardView>-->

    <TextView
        android:id="@+id/selectAGardenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_garden_to_view_devices"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>