<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SensorsDashboardFragment">

    <Button
        android:id="@+id/sensorsButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sensors"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/framedSwipeCardThree"
        app:strokeColor="#00FFFFFF" />

    <Button
        android:id="@+id/actuatorsButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/actuators"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toEndOf="@+id/sensorsButton"
        app:layout_constraintTop_toBottomOf="@+id/framedSwipeCardThree" />

    <!--<androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="300dp"
        app:cardBackgroundColor="@color/pastel_green"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/swipeCardViewPager"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </androidx.cardview.widget.CardView>-->

    <include
        android:id="@+id/framedSwipeCardOne"
        layout="@layout/framed_swipe_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></include>

    <include
        android:id="@+id/framedSwipeCardTwo"
        layout="@layout/framed_swipe_card"
        android:layout_width="@dimen/swipeCardWidth"
        android:layout_height="@dimen/swipeCardHeight"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/framedSwipeCardOne"></include>

    <include
        android:id="@+id/framedSwipeCardThree"
        layout="@layout/framed_swipe_card"
        android:layout_width="@dimen/swipeCardWidth"
        android:layout_height="@dimen/swipeCardHeight"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/framedSwipeCardTwo"></include>

    <TextView
        android:id="@+id/selectAGardenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_a_garden_to_view_devices"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>